# Vireya

./: .gitignore  LICENSE  README.md  data.py  pyproject.toml  requirements.txt  setup.py  test.py  train.py
vireya/models/: configs.py  convert.py  kernel.py  model.py  stats.py
vireya/utils/: logging.py  optim.py
