[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vireya"
version = "0.1.0"
description = "Vision Transformer with RoPE-Mixed, MLA, and MoE"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.13"

# Dependencies (from requirements.txt, omit any -e or Git-based entries here)
dependencies = [
    "absl-py==2.2.1",
    "annotated-types==0.7.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "docker-pycreds==0.4.0",
    "filelock==3.16.1",
    "fsspec==2024.10.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "grpcio==1.71.0",
    "idna==3.10",
    "Jinja2==3.1.4",
    "Markdown==3.7",
    "MarkupSafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.1.2",
    "packaging==24.2",
    "pillow==11.0.0",
    "platformdirs==4.3.7",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "pydantic==2.11.1",
    "pydantic_core==2.33.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "sentry-sdk==2.24.1",
    "setproctitle==1.3.5",
    "setuptools==70.2.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sympy==1.13.3",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.8.0.dev20250327+cu128",
    "torchaudio==2.6.0.dev20250329+cu128",
    "torchvision==0.22.0.dev20250329+cu128",
    "typing-inspection==0.4.0",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "wandb==0.19.8",
    "Werkzeug==3.1.3"
]
